openmediavault (0.5.8) stable; urgency=low

  * Various WebGUI API improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 05 Sep 2013 23:27:33 +0200

openmediavault (0.5.7) stable; urgency=low

  * Various improvements and bugfixes.
  * Fix bug in user/group import RPC.
  * Fix bug in filesystem quota dialog.
  * Fix SSL cert issue when activating TLS for the FTP service.
  * Mantis 0000815: When log on a non-administrator account,there is some
    "undefined" text.
  * Mantis 0000817: Powermanagement - Power down button does not work.
  * Mantis 0000819: Column-Width not saved in Diagnostic -> System logs.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 02 Sep 2013 18:21:42 +0200

openmediavault (0.5.6) stable; urgency=low

  * Various improvements and bugfixes.
  * Mantis 0000810: Web interface does not load at all, blank screen.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Aug 2013 18:24:42 +0200

openmediavault (0.5.5) stable; urgency=low

  * Mantis 0000809: Not displaying FTP-log.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Aug 2013 18:13:53 +0200

openmediavault (0.5.4) stable; urgency=low

  * Various improvements and bugfixes.
  * Disable the NTP daemon panic feature.
  * Mantis 0000810: Web interface does not load at all, blank screen.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Aug 2013 17:22:54 +0200

openmediavault (0.5.3) stable; urgency=low

  * Fix bug in network interface panel.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 27 Aug 2013 19:58:02 +0200

openmediavault (0.5.2) stable; urgency=low

  * Various improvements and bugfixes.
  * Fix locale issue caused by purged monit environment.
  * Mantis 0000812: Error setting the time.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 27 Aug 2013 17:24:30 +0200

openmediavault (0.5.1) stable; urgency=low

  * Update locales.
  * Various improvements and bugfixes.